Created using Popcode: https://popcode.org

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mario jQuery Challenge</title>
+        <title>Mario Challenge</title>
     </head>
     <body>  
             <h1> Mario JQuery Challenge!</h1>
