Created using Popcode: https://popcode.org

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> <html><head>
-        <title>Mario jQuery Challenge</title>
+        <title>Mario Challenge</title>
     <style>body{
 background-color: lightgreen;
 }
